--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/dcontrer83/Roadtrip#readme",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.16",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
