--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "request": "^2.88.2"
   }
 }
